--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,17 +1,28 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Home</ion-title>
+    <ion-title>Generate your baby name. </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <h2>Welcome to Ionic!</h2>
-  <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
-  </p>
-  <p>
-    Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
-  </p>
+
+  <img src="assets/img/rounded_red_button.jpeg"
+  style=" height: 50vh;
+          width: auto;
+          margin: auto;
+          display: block;"
+  (click)="nextpage()" block>
+<br><br>
+
+  <ion-list style="border-bottom: 1px solid gray; border-radius: 5px;">
+    <ion-item>
+      <ion-label>Gender</ion-label>
+        <ion-select [(ngModel)]="gender">
+          <ion-option value="N">No Gender</ion-option>
+          <ion-option value="M">Masculine</ion-option>
+          <ion-option value="F">Feminine</ion-option>
+        </ion-select>
+    </ion-item>
+  </ion-list>
+
 </ion-content>
